YAML/flask-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
  namespace: VALUE 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: arasbav/personio_app:latest
        imagePullPolicy: Always 
        ports:
           - containerPort: 5000
        volumeMounts:
          - name: flasklogs
            mountPath: /var/log
      volumes:
        - hostPath:
            path: /var/log
          name: flasklogs
