YAML/mongodb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: VALUE 
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    role: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-flask
  namespace: VALUE
spec:
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 30017
    port: 27017
    targetPort: 27017
  selector:
    role: mongo
