YAML/tls_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: VALUE 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:      
  - secretName: my-first-secret
  rules:
  - host: personio.de
  - http:
      paths:
      - path: /
        backend:
          serviceName: flask-personio 
          servicePort: 5000
